# RABBIT

./: .devcontainer.json  .gitignore  CITATION.cff  ComputeFeatures.py  ExtractEvent.py  GenerateActivities.py  MANIFEST.in  RABBIT.py  README.md  bimbas.joblib  bimbas_model.joblib  flake.nix  important_features.py  pyproject.toml  rabbit.py  rabbit_model.json  requirements.txt  setup.py
data_notebooks/: InterRaterAgreement_paper.ipynb  Training_validation_testing.ipynb
data_notebooks/data/: bot_accounts.txt  bot_features.csv  human_features.csv
nix/imports/: devshell.nix
rabbit/: ExtractEvent.py  GenerateActivities.py  important_features.py  main.py
src/rabbit/: ExtractEvent.py  GenerateActivities.py  important_features.py  rabbit.py
src/rabbit/data/: bimbas.joblib
